k8s/python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moscow-time-service-python
spec:
  type: LoadBalancer
  ports:
   - port: 8080
     targetPort: 8080
  selector:
    app: moscow-time-python
